# ppa-predictions

./: .env-example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
.github/workflows/: cicd.yaml  main.yaml
alembic/: env.py
alembic/versions/: 06cfa5705a41_predictions_hols_a_list_of_receivers.py  081e8a2e66c3_remove_unique_constraint.py  0b21558568d7_fully_reset_db_schema_after_change_in_.py  0d494003187c_locationsettings_historic_days_for_.py  1c511b7b12e2_save_component_on_prediction.py  5cee5134e083_additional_field_on_locationsettings.py  693cd4058b08_squash_migrations.py  aebee7a55a6c_initial_schema_migration.py  b12856f1c61b_save_prognosis_receiver_for_producers.py  cc5a3a990074_locationsettings_uses_dates_instead_of_.py  da3e81c1f0e2_name_for_components.py  ddb3f7d3af36_remove_unique_constraint.py  e4603796b93a_prediction_stores_its_shipments.py  e5afa809a3d3_add_alias_to_location.py  e7944384d171_store_tso_on_location.py
kubernetes/: .helmignore  Chart.yaml  prod-values.yaml  staging-values.yaml
kubernetes/scripts/: run_migrations.sh
kubernetes/templates/: configmap.yaml  deployment.yaml  ingress.yaml  migration-job.yaml  onepassworditem.yaml  service.yaml
scripts/: compare_predictions.py  create_lehman_location.py  create_locations.py  create_teileinspeise_locations.py
scripts/create_locations/: create_locations.py  teileinspeiser.py  vgp.py
src/: config.py  enums.py  main.py
src/api/: common.py  components.py  locations.py  middleware.py  projects.py
src/domain/: commands.py  events.py  handlers.py  model.py
src/infrastructure/: message_bus.py  unit_of_work.py
src/persistence/: repository.py  sqlalchemy.py
src/prognosis/: api.py  enums.py
src/services/: data_sender.py  data_store.py  email.py  load_data.py  predictor.py
src/utils/: dataframe_schema.py  dataframe_schemas.py  decorators.py  exceptions.py  external_schedules.py  market_location_number_validator.py  prediction_horizon.py  split_df_by_day.py  timezone.py
tests/: factories.py  fakes.py
tests/e2e/: api_client.py  test_api_client.py  tst_api_client.py
tests/integration/: conftest.py  test_repository.py  tst_load_data.py  tst_repository.py
tests/test_prognosis/: conftest.py  factories.py
tests/unit/: conftest.py  historic_load_profile.csv  test_customer.py  test_handlers.py  test_historic_load_profile.py  test_load_data.py  (+2 more)
(+26 files in other folders)
