[tool.poetry]
name = "ppa-predictions"
version = "0.1.0"
description = ""
authors = ["kaitimofejew <kai.timofejew@node.energy>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pytest = "^7.4.4"
scikit-learn = "^1.4.0"
pandas = "^2.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
