[tool.poetry]
name = "ppa-predictions"
version = "0.1.0"
description = ""
authors = ["kaitimofejew <kai.timofejew@node.energy>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pytest = "^7.4.4"
scikit-learn = "^1.4.0"
pandas = "^2.2.0"
holidays = "^0.41"
pyarrow = "^15.0.0"
croniter = "^2.0.1"
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.2.0"
setuptools = "^69.0.3"
httpx = "^0.27.0"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
